2009-12-22 Felix Zielcke <fzielcke@z-51.de>

	* util/grub.d/30_os-prober.in (osx_entry): Add round brackets
	after function name.
	Noticed by Rene Engelhard <rene@debian.org>.

2009-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/lspci.c (grub_pci_classes): Add "USB Controller".
	(options): New variable.
	(iospace): Likewise.
	(grub_lspci_iter): List IO spaces if "-i" was given.
	(grub_cmd_lspci): Parse options.
	(GRUB_MOD_INIT(lspci)): Use extcmd.
	(GRUB_MOD_FINI(lspci)): Likewise.

2009-12-22 Felix Zielcke <fzielcke@z-51.de>

	* util/grub.d/30_os-prober.in (osx_entry): Remove non POSIX compliant
	`function' keyword.
	Patch by Tony Mancill <tmancill@debian.org>.

2009-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* bus/usb/uhci.c (grub_uhci_transfer): Set a limit transaction time.
	(grub_uhci_portstatus): Likewise.
	(grub_uhci_portstatus): Add necessary delay.
	* bus/usb/usbhub.c (grub_usb_hub_add_dev): Fix loop-break condition.

2009-12-21  Carles Pina i Estany  <carles@pina.cat>

	* commands/acpi.c (options): Fix capitalizations and/or full stops.
	(GRUB_MOD_INIT): Likewise.
	* commands/boot.c (GRUB_MOD_INIT): Likewise.
	* commands/cmp.c (grub_cmd_cmp): Improve the help message.
	* commands/echo.c (options): Fix capitalizations and/or full stops.
	* commands/efi/loadbios.c (enable_rom_area): Likewise.
	(enable_rom_area): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/gptsync.c (GRUB_MOD_INIT): Likewise.
	* commands/halt.c (GRUB_MOD_INIT): Improve the help message.
	* commands/handler.c (GRUB_MOD_INIT): Likewise.
	* commands/hdparm.c (options): Fix capitalizations and/or full stops.
	* commands/hexdump.c (options): Likewise.
	* commands/i386/cpuid.c (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/drivemap.c (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/halt (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/play.c (GRUB_MOD_INIT): Likewise.