@@ -363,6 +363,7 @@ class Script
     "CLEANFILES += #{@name}
 
 #{@name}: #{src} $(#{src}_DEPENDENCIES) config.status
+	sed -i -e 's,@pkglib_DATA@,$(pkglib_DATA),g' #{src}
 	./config.status --file=#{name}:#{src}
 	chmod +x $@
 
